# PayrollandPicks

./: .gitignore  README.md  package.json
backend/: Pipfile  pyproject.toml  requirements.txt
backend/apps/nba/: admin.py  apps.py  models.py
backend/apps/nba/migrations/: 0001_initial.py  0002_auto_20210623_1810.py  0002_remove_team_team_conference.py  0003_auto_20210503_2251.py  0004_auto_20210504_0140.py  0005_auto_20210511_0330.py  0006_rename_postition_player_position.py  0007_player_bonus.py  0008_auto_20210511_0408.py  0009_rename_team_player_team_name.py  0010_auto_20210511_0411.py  0011_alter_player_country.py  0012_rename_team_name_id_player_team_name.py  0013_rename_team_name_player_team.py  0014_alter_player_team.py  0015_alter_player_team.py
backend/apps/schema/: schema.py
backend/apps/users/: admin.py  models.py
backend/apps/users/migrations/: 0001_initial.py
backend/backend/: settings.py  wsgi.py
backend/config/: settings.py  urls.py  wsgi.py
backend/payrollsandpicks/: apps.py  models.py
backend/payrollsandpicks/migrations/: 0001_initial.py
frontend/: codegen.yml  next.config.js  package-lock.json  package.json
frontend/.next/: build-manifest.json
frontend/components/: NavBar.tsx
frontend/config/: index.ts
frontend/graphql/: queries.ts
frontend/interfaces/: index.ts
frontend/pages/: _app.tsx  index.tsx
frontend/queries/: AllPlayersQuery.graphql  AllTeamsQuery.graphql  PlayersByTeamQuery.graphql  SinglePlayerQuery.graphql  SingleTeamQuery.graphql  TeamQuery.graphql
frontend/styles/: Home.module.css  Navbar.module.css  (+2 more)
(+20 files in other folders)
