[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["skuttenkuler <sam.kuttenk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"
Django = "^3.1.7"
psycopg2-binary = "^2.8.6"
djangorestframework = "^3.12.2"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
